--- a/Login.css
+++ b/Login.css
@@ -5,7 +5,7 @@ body {
    align-items: center;
    justify-content: flex-start;
    height: 100vh;
-   background: #F1F3F6;
+   background: #fff;
    height: calc(var(--vh, 1vh) * 100);
    overflow: hidden;
    color: rgb(var(--color));
@@ -14,35 +14,23 @@ body {
 
 .container {
     display: flex;
-    align-items: center;
     justify-content: center;
-    max-width: 500px;
+    align-items: center;
     width: 100%;
     background: #F1F3F6;
     height: 100vh;
     position: relative;
 }
 
-.container:after{
-    content: '';
-    position: absolute;
-    right: -158px;
-    background: #fff;
-    height: 100vh;
-    width: 150px;
-    top: 0px;        
-    border-radius: 40px 0px 0px 40px;
-}
-
 .der-login{
-    width: 100%;
+    width: 100%;    
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    border-radius: 40px;
-    padding: 35px;
-    max-width: 400px;
+    flex-direction: column; 
+    border-radius: 7px;
+    max-width: 500px;   
+    background: #fff;
 }
 
 .der-login h1 {
@@ -50,7 +38,7 @@ body {
     font-size: 1.8rem;
 }
 
-.der-login .die-inputs {
+.der-login {
     padding-bottom: 20px;
     width: 100%;
 }
@@ -63,8 +51,12 @@ body {
 
 .der-login .die-inputs .forget a {
     text-decoration: none;
-    color: rgb(var(--color));
+    color: black;
     font-size: .9rem;
+}
+
+.die-inputs {
+    width: 85%;
 }
 
 .der-input {
@@ -73,18 +65,21 @@ body {
 
 .der-input input {
     width: 100%;
-    padding: 14px 20px;
+    padding: 15px 0px;
     border: 0px;
     background: #F1F3F6;
     border-radius: 18px;
-    border: 2px solid rgb(var(--color));
+    color: black;
     transition: all .25s ease;
-    opacity: .2;
+    opacity: .5;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.24);
+    outline: 0;
+    padding-left: 10px;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .der-input input:focus {
-    opacity: 1;
+    opacity: 1;     
 }
 
 .der-input label {
@@ -97,13 +92,12 @@ body {
 }
 
 .btn-login {
-    background: rgb(var(--primary));
+    background: darkturquoise;
     color: #fff;
     border: 0px;
-    padding: 14px 20px;
+    padding: 10px 30px;
     border-radius: 18px;
-    width: 100%;
-    display: 100%;
+    width: 100%;    
     cursor: pointer;
     font-size: 1.1rem;
     transition: all .25s ease;
