--- a/Login.css
+++ b/Login.css
@@ -12,6 +12,21 @@ body {
    font-family: 'Source Sans Pro', sans-serif;
 }
 
+/* Rules for sizing the icon. */
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+
+/* Rules for using icons as black on a light background. */
+.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
+.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
+
+/* Rules for using icons as white on a dark background. */
+.material-icons.md-light { color: rgba(255, 255, 255, 1); }
+.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+.material-icons.silver600 { color: #797979; }
+
 .container {
     display: flex;
     justify-content: center;
@@ -20,6 +35,7 @@ body {
     background: #F1F3F6;
     height: 100vh;
     position: relative;
+    flex-direction: column;
 }
 
 .der-login{
@@ -35,7 +51,8 @@ body {
 
 .der-login h1 {
     font-weight: normal;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
+    color: #7d7d7d;
 }
 
 .der-login {
@@ -55,8 +72,36 @@ body {
     font-size: .9rem;
 }
 
+.container .forget a {
+    text-decoration: none;
+    color: black;
+    font-size: .9rem;
+}
+
+.cardLogin {
+    width: 500px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+     
+}
+
+.linkLogin {
+   padding: 10px 0;   
+   width: 100%;   
+   text-align: center;   
+   background: #fff; 
+   margin: 5px;
+   border-radius: 7px;
+   text-decoration: none;
+}
+
 .die-inputs {
     width: 85%;
+}
+
+.die-inputs .der-input .der-label {
+    display: flex;
 }
 
 .der-input {
@@ -101,4 +146,8 @@ body {
     cursor: pointer;
     font-size: 1.1rem;
     transition: all .25s ease;
+}
+
+.btn-login:hover {
+    box-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
 }
