--- a/Login.css
+++ b/Login.css
@@ -34,7 +34,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    background: #F1F3F6;
+    background: #e6e6e6;
     height: 100vh;
     position: relative;
     flex-direction: column;    
